[tool.poetry]
name = "valueworks-ics-notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "valueworks_ics_notebook"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
polars = "^1.12.0"
requests = "^2.32.3"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
